developB change index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="container-fluid " id="dl-menu">
 			<div class="dl-title">
 				<a  id="mobile-menu">
-					<span class="phone-text">首页-master</span>
+					<span class="phone-text">首页-开发者B</span>
 					<span class="mobile-icon">
 						<i class="fa fa-angle-down" aria-hidden="true"></i>
 					</span>
