--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1"/>
-		<title>装修公司</title>
+		<title>装修公司-master开发</title>
 		<link rel="stylesheet" type="text/css" href="css/font-awesome.css"/>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
 		<link rel="stylesheet" type="text/css" href="css/index.css"/>
@@ -15,7 +15,7 @@
 		<div class="container-fluid " id="dl-menu">
 			<div class="dl-title">
 				<a  id="mobile-menu">
-					<span class="phone-text">首页-开发者B</span>
+					<span class="phone-text">首页-开发者</span>
 					<span class="mobile-icon">
 						<i class="fa fa-angle-down" aria-hidden="true"></i>
 					</span>
